--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,6 +112,7 @@ jobs:
       contents: write
     needs: build
     runs-on: ubuntu-latest
+    if: ${{ always() }}
     steps:
       - uses: actions/download-artifact@v4
 
